# vlm-dpo

./: README.md  RESEARCH_PLAN.md  pyproject.toml  research_proposal2.md
configs/: base.yaml  exp1_vlm_agreement.yaml  exp2_image_dpo.yaml  exp3_video_dpo.yaml  exp4_cross_modal.yaml  exp5_multi_aspect.yaml
data/: prompts.jsonl
scripts/: generate_pairs.py  prepare_human_eval.py  prepare_prompts.py  run_all.sh  run_exp1.sh  run_exp1_agreement.sh  run_exp2.sh  run_exp3.sh  run_exp4.sh  run_exp5.sh
tests/: test_config.py  test_data.py  test_dpo_loss.py  test_lora_transfer.py  test_scoring.py
vlm_dpo/: __init__.py
vlm_dpo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vlm_dpo/cli/: __init__.py  main.py
vlm_dpo/config/: __init__.py  experiment_config.py
vlm_dpo/data/: __init__.py  pair_generator.py  preference_dataset.py  prompt_dataset.py
vlm_dpo/evaluation/: __init__.py  human_eval.py  metrics.py  vbench_wrapper.py
vlm_dpo/models/: __init__.py  lora_utils.py  model_loader.py
vlm_dpo/scoring/: __init__.py  prompts.py  vlm_scorer.py
vlm_dpo/training/: __init__.py  dpo_loss.py  scheduler.py  trainer.py
